--- a/actions/templates/actions/vampire_power/_directions.html
+++ b/actions/templates/actions/vampire_power/_directions.html
@@ -16,8 +16,7 @@
     </ul>
 </div>
 <p>
-    In the next slides, you’ll meet the vampires in your home. For each vampire, we’ve highlighted 
-    our recommended slaying method. If you plan on using one of the other tactics, go ahead and select it.
+    Start by identifying the worst vampires in your home
 </p>
 
-<a id="directions" class="frame_shifter button" href="#">Start Slaying</a>
+<a id="directions" class="frame_shifter button" href="#">Find your home's vampires</a>
