--- a/actions/templates/actions/vampire_power/_get_started.html
+++ b/actions/templates/actions/vampire_power/_get_started.html
@@ -1,7 +1,6 @@
 {% load dated_static %}
-<h2>Do you have any of these?</h2>
-<img src="{% dated_static 'images/actions/eliminate-standby-vampire-power/get_started.jpg' %}" alt="getting started" width="432" height="126"/>
+<h1>The most wanted vampires</h1>
 <p>
-    These are some of the thirstiest vampires in your home. Make a plan to slay them today.
+    Build your plan for slaying the thirstiest energy vampires in your home
 </p>
 <a id="get_started" class="frame_shifter button" href="#">Get Started</a>
