--- a/templates/rah/vampire_hunt.html
+++ b/templates/rah/vampire_hunt.html
@@ -6,10 +6,12 @@
         <div class="box_two_middle">
             <h1>The Vampire Hunt</h1>
             <p>
-                There are vampires in your home right now -- energy vampires. Every
-                day, these vampires suck energy and money away from your home. With
-                Halloween just around the corner, time is running out to fight back
-                against vampire power. Join the vampire hunt and become a vampire slayer.
+                On Halloween night, you’ll probably see lots of vampire costumes. But there 
+                are real vampires in your home right now – energy vampires. Every day, 
+                "vampire electronics" suck energy and money away from your home. Only you can 
+                put a stop to this terrifying energy waste. Take action with Repower at Home 
+                to slay these vampires, and recruit your friends to join your hunting party. 
+                Can you recruit the most vampire slayers by Halloween?
             </p>
             <h3>What is vampire power?</h3>
             <p>
@@ -17,6 +19,7 @@
                 things like sensors and lights. In fact, <strong>the average electronic consumes
                 most of its energy when you're not even using it</strong>. Every month,
                 you spend about 10% of your electricity bill feeding these vampires.
+                <a href="{% url action_detail 'eliminate-standby-vampire-power' %}">Learn more</a>
             </p>
             <h3>Become a vampire slayer</h3>
             <p>Your first challenge is to free your own home from the grips of vampire power</p>
@@ -38,9 +41,12 @@
             </p>
             <h3>Take it to the streets</h3>
             <p>
-                Online recruitment is just the beginning. You can also gather commitments to
-                slay vampires face-to-face. We'll give you a set of materials that will turn
-                and Joe Schmoe into a vampire-slaying machine.<br/>
+                You can also recruit vampire slayers face-to-face. Start a vampire hunting party
+                in your community. Organize a door knocking campaign or a tabling event to 
+                inspire slayers to take action wit you. We'll give you a set of materials that 
+                will turn any Joe Schmoe into a vampire-slaying machine. To learn more about 
+                how you can bring the Vampire Hunt to your community, email 
+                field@repowerathome.com<br/>
                 <a href="#">Download recruitment materials</a>
             </p>
             <p>
