Adding FB api key to meta

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <meta name="geo.placename" content="Alliance for Climate Protection"/>
         <meta name="ICBM" content="38.896231, -77.024158"/>
         <meta property="og:site_name" content="Repower at Home"/>
+        <meta property="fb:app_id" content="132085630163980"/>
         <meta name="keywords" content="{% block meta_keywords %}energy efficiency, home energy, climate change, repower at home, alliance for climage protection{% endblock %}" />
         <meta name="description" content="{% block meta_desc %}We can take action to keep millions of pounds of dirty coal from polluting our communities. Every point you earn means one less pound of coal needs to be burned.{% endblock %}" />
         <meta name="DC.title" content="Repower at Home" /> 
