--- a/actions/templates/actions/vampire_power/power_strip_help.html
+++ b/actions/templates/actions/vampire_power/power_strip_help.html
@@ -1,12 +1,7 @@
 {% load dated_static %}
 <img src="{% dated_static 'images/theme/switch_off.png' %}" height="88px" width="190px" alt="power strip" />
 <p>
-    Vampires often hang out together. Your television, DVD player, cable box, 
-    and video game system may all be plugged into the same power strip. When 
-    you're done watching television, turn off the button on your power strip. 
-    You can slay all the vampires on the strip with just a flick of a switch. 
-</p>
-<p>
-    Remember, your electronics will still be protected from "surges" when the 
-    power strip is turned off.
+    Slay all the vampires in your home office or entertainment area with a flick of a switch. 
+    Connect all the vampires to the switch. When you’re done watching television or using the 
+    computer, turn off the button on the power strip. 
 </p>
