Updating text in preparation for vetting

--- a/templates/rah/sticker_form.html
+++ b/templates/rah/sticker_form.html
@@ -8,40 +8,33 @@
             <div id="registration_left_col">
                 <h1>We did it!</h1>
                 <p>
-                    This summer, we set an ambitious goal: inspire Americans to save the equivalent of seven million pounds
-                    of coal by 10/10. Thanks to Trendsetters like you, not only did we meet that goal, but we surpassed it.
-                    On 10/10, a global day of action, we joined thousands of people around the world in sending a clear
-                    message: <b>we’re not waiting for solutions to climate change – we’re getting to work.</b>
+                    We set an ambitious goal: inspire Americans to save the equivalent of seven million pounds of coal
+                    by 10/10. Thanks to Trendsetters like you, we met that goal.
+                </p>
+
+                <p>
+                    On 10/10, a global day of action, we joined thousands of people in sending a clear message: we’re
+                    not waiting for solutions to climate change – we’re getting to work.
                 </p>
                 <p>
-                    To commemorate our achievement, <b>we’re giving all of our Trendsetters a free sticker</b>, identifying you as
-                    someone who is committed to blazing the trail forward.
+                    To commemorate our achievement, <b>we’re giving all of our Trendsetters a free sticker</b>,
+                    identifying you as someone who is committed to a cleaner future.
                 </p>
                 <p>
-                    Together, we are laying the groundwork for an enormous transformation in how we consume and think about
-                    energy. But we’re just at the beginning of this movement. The Trendsetter sticker isn’t just a reward
-                    for being on the cutting edge of climate action; it’s also a powerful way to encourage others to join
-                    us.
+                    Together, we have laid the groundwork for an enormous transformation in how we consume energy. But
+                    we’re just at the beginning of this movement, and the Trendsetter sticker is a powerful way to
+                    encourage others to join us.
                 </p>
                 <p>
-                    When your friends and neighbors see that you’re taking action to save energy, it inspires them to get
-                    involved. Maybe your neighbor wants to save energy, but keeps putting it off. Seeing that you’re already
-                    taking action will help her move from someone who is on the sidelines, to someone who is taking action
-                    and making a difference.
+                    When your friends and neighbors see that you’re taking action to save energy, it inspires them to
+                    get involved. Maybe your neighbor wants to save energy, but keeps putting it off. Seeing your
+                    commitment can persuade her to take those critical fist steps.
                 </p>
                 <p>
-                    That’s why we’re asking you to put your sticker someplace visible. Great places to show off your
-                    Trendsetter status include you laptop, your favorite water bottle, your mailbox, your recycling bin
-                    and your car. Once you put up the sticker, take a picture of it and <a
+                    Put your sticker someplace visible. Great places to show off your Trendsetter status include you
+                    laptop, your recycling bin or your car. Once you put up the sticker, take a picture of it and <a
                     href="mailto:feedback@repowerathome.com?subject=My%20Trendsetter%20Sticker">email it back to us</a>.
                     We love seeing the creative places that Trendsetters are using to get the message out.
-                </p>
-                <p>
-                    Thank you again for helping us reach our goal. We’re often a great start, and with your help, we can
-                    make a huge difference.
-                </p>
-                <p>
-                    <i>Fill out the form to receive your free Trendsetter sticker in the mail.</i>
                 </p>
             </div>
             <div id="registration_right_col">
