added a query param to the end of the img urls for cache busting reasons

--- a/actions/templates/actions/vampire_power/_device.html
+++ b/actions/templates/actions/vampire_power/_device.html
@@ -1,5 +1,5 @@
 <h2>{{ field.label }}</h2>
-<img class="vampire_device_image" src="{{ MEDIA_URL }}images/actions/eliminate-standby-vampire-power/{{ field.name }}.jpg" alt="{{ field.label }}" width="432" height="126" />
+<img class="vampire_device_image" src="{{ MEDIA_URL }}images/actions/eliminate-standby-vampire-power/{{ field.name }}.jpg?1" alt="{{ field.label }}" width="432" height="126" />
 {# <div class="vampire_savings_container"> #}
 {#     Save up to $<span class="vampire_savings">{{ field.field.savings }}</span><br /> #}
 {#     annually by slaying <br /> #}
