--- a/commitments/templates/commitments/show.html
+++ b/commitments/templates/commitments/show.html
@@ -6,7 +6,7 @@
 <div class="box_two_middle">
     <h1>The Commitment Landing Page</h1>
     <p>
-        <a href="{% url commitments_card_create %}" class="button">Enter commitment cards</a>
+        <a href="{% url commitments_card_create %}" class="button">Enter a new commitment card</a>
     </p>
     {% if actions %}
         <table border="0" cellspacing="5" cellpadding="5">
